Attempting to fix svg element with display: initial index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <svg style="padding: 0; float: left;" id="canvas"></svg><br>
+        <svg style="padding: 0; float: left; display: initial;" id="canvas"></svg><br>
         <div style="background-color: transparent; padding: 0; margin: 0;">
             <textarea id="input"></textarea><br>
             <input id="windowX" min="1" step="1" value="10" type="number" required><br>
