--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Auto Grapher</title>
         <link rel="stylesheet" href="https://caretparrot.github.io/My-Libraries/dark.css">
+        <link rel="favicon" href="https://caretparrot.github.io/My-Libraries/Profile Picture.png">
     </head>
 
     <body>
