--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <title>Auto Grapher</title>
         <link rel="stylesheet" href="https://caretparrot.github.io/My-Libraries/dark.css">
         <link rel="favicon" href="https://caretparrot.github.io/My-Libraries/Profile Picture.png">
+        <script defer src="https://caretparrot.github.io/My-Libraries/gpl.js"></script>
+        <script defer src="https://caretparrot.github.io/My-Libraries/math-plus.js"></script>
+        <script defer src="https://caretparrot.github.io/Auto-Grapher/script.js"></script>
     </head>
 
     <body>
@@ -17,8 +20,6 @@
             <input id="windowY" min="1" step="1" value="10" type="number" required><br>
             <input id="screenSize" min="100" step="10" value="10" type="number" required><br>
         </div>
-        <script src="https://caretparrot.github.io/My-Libraries/gpl.js"></script>
-        <script src="https://caretparrot.github.io/My-Libraries/math-plus.js"></script>
     </body>
 
 </html>
