Fixed favicon issue index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Auto Grapher</title>
         <link rel="stylesheet" href="https://caretparrot.github.io/My-Libraries/dark.css">
-        <link rel="favicon" href="https://caretparrot.github.io/My-Libraries/Profile Picture.png">
+        <link rel="icon" href="https://caretparrot.github.io/My-Libraries/Profile Picture.png">
         <script defer src="https://caretparrot.github.io/My-Libraries/gpl.js"></script>
         <script defer src="https://caretparrot.github.io/My-Libraries/math-plus.js"></script>
         <script defer src="https://caretparrot.github.io/Auto-Grapher/script.js"></script>
