--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     </head>
 
     <body>
-        <svg style="padding: 0; float: left; display: initial;" id="canvas"></svg><br>
-        <div style="background-color: transparent; padding: 0; margin: 0;">
-            <textarea id="input"></textarea><br>
-            <input id="windowX" min="1" step="1" value="10" type="number" required><br>
-            <input id="windowY" min="1" step="1" value="10" type="number" required><br>
-            <input id="screenSize" min="100" step="10" value="10" type="number" required><br>
+        <svg style="padding: 0; display: initial;" id="canvas"></svg>
+        <div style="background-color: transparent; padding: 0;">
+            <textarea id="input"></textarea>
+            <input id="windowX" min="1" step="1" value="10" type="number">
+            <input id="windowY" min="1" step="1" value="10" type="number">
+            <input id="screenSize" min="100" step="10" value="10" type="number">
         </div>
     </body>
 
