Made body a display flex element index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <script defer src="https://caretparrot.github.io/Auto-Grapher/script.js"></script>
     </head>
 
-    <body>
+    <body style="display: flex;">
         <svg style="padding: 0; display: initial;" id="canvas"></svg>
         <div style="background-color: transparent; padding: 0;">
             <textarea id="input"></textarea>
