Made boxes not stretch out too much index.html

--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
         <title>Auto Grapher</title>
         <link rel="stylesheet" href="https://caretparrot.github.io/My-Libraries/dark.css">
         <link rel="icon" href="https://caretparrot.github.io/My-Libraries/Profile Picture.png">
+        <style>
+
+        </style>
         <script defer src="https://caretparrot.github.io/My-Libraries/gpl.js"></script>
         <script defer src="https://caretparrot.github.io/My-Libraries/math-plus.js"></script>
         <script defer src="https://caretparrot.github.io/Auto-Grapher/script.js"></script>
     </head>
 
-    <body style="display: flex;">
+    <body style="display: flex; align-items: flex-start;">
         <svg style="padding: 0; display: initial;" id="canvas"></svg>
         <div style="background-color: transparent; padding: 0;">
             <textarea id="input"></textarea>
