Added manifest and updated index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Auto Grapher</title>
         <link rel="stylesheet" href="https://caretparrot.github.io/My-Libraries/dark.css">
         <link rel="icon" href="https://caretparrot.github.io/My-Libraries/Profile Picture.png">
+        <link rel="manifest" href="https://caretparrot.github.io/Auto-Grapher/manifest.json" />
         <style>
 
         </style>
