--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
 
     <body style="display: flex; align-items: flex-start;">
-        <svg style="padding: 0; display: initial;" id="canvas"></svg>
+        <svg style="padding: 0;" id="canvas"></svg>
         <div style="background-color: transparent; padding: 0;">
             <textarea id="input"></textarea>
             <input id="windowX" min="1" step="1" value="10" type="number">
