--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <body style="display: flex; align-items: flex-start;">
         <svg style="padding: 0; flex-grow: initial;" id="canvas"></svg>
-        <div style="background-color: transparent; padding: 0;">
+        <div style="background-color: transparent; padding: 0; flex-flow: column wrap;">
             <textarea id="input"></textarea>
             <input id="windowX" min="1" step="1" value="10" type="number">
             <input id="windowY" min="1" step="1" value="10" type="number">
