--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
 
     <body style="display: flex; align-items: flex-start;">
-        <svg style="padding: 0; flex-grow: initial;" id="canvas"></svg>
+        <svg style="padding: 0; flex-grow: initial; max-height: calc(100% - 2vmin);" id="canvas"></svg>
         <div style="background-color: transparent; padding: 0; flex-flow: column wrap;">
             <textarea id="input"></textarea>
             <input id="windowX" min="1" step="1" value="10" type="number">
