Changed background color of inputs to be normal bg color index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
         <link rel="icon" href="https://caretparrot.github.io/My-Libraries/Profile Picture.png">
         <link rel="manifest" href="https://caretparrot.github.io/Auto-Grapher/manifest.json" />
         <style>
-
+            div * {
+                background-color: hsl(0, 0%, 10%);
+            }
         </style>
         <script defer src="https://caretparrot.github.io/My-Libraries/gpl.js"></script>
         <script defer src="https://caretparrot.github.io/My-Libraries/math-plus.js"></script>
