--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <input id="windowX" min="1" step="1" value="10" type="number">
             <input id="windowY" min="1" step="1" value="10" type="number">
             <input id="screenSize" min="100" step="10" value="10" type="number">
+            <input id="xinput" min="-10" max="10" type="number">
         </div>
     </body>
 
