--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <input id="windowX" min="1" step="1" value="10" type="number">
             <input id="windowY" min="1" step="1" value="10" type="number">
             <input id="screenSize" min="100" step="10" value="10" type="number">
-            <input id="xinput" min="-10" max="10" value="0" type="number">
-            <input id="equation" min="0" type="number" value="0">
+            <input id="xinput" min="-10" max="10" value="0">
+            <input id="equation" min="0" type="number" value="0" step="1">
             <label id="outputLabel">Y: </label>
         </div>
     </body>
