--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             svg {
                 padding: 0;
             }
+
+            div {
+                background-color: transparent; 
+                padding: 0;
+            }
         </style>
         <script defer src="https://caretparrot.github.io/My-Libraries/gpl.js"></script>
         <script defer src="https://caretparrot.github.io/My-Libraries/math-plus.js"></script>
@@ -34,7 +39,7 @@
     <body>
         <svg id="canvas"></svg>
         
-        <div style="background-color: transparent; padding: 0;">
+        <div>
             <textarea id="input"></textarea>
             <input id="windowX" min="1" step="1" value="10" type="number">
             <input id="windowY" min="1" step="1" value="10" type="number">
