Added flex control to div

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             div {
                 background-color: transparent; 
                 padding: 0;
+                flex-flow: column wrap;
             }
         </style>
         <script defer src="https://caretparrot.github.io/My-Libraries/gpl.js"></script>
