--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             div {
                 background-color: transparent; 
                 padding: 0;
-                flex-flow: column wrap;
+                display: grid;
+                grid: auto / auto auto auto auto;
             }
         </style>
         <script defer src="https://caretparrot.github.io/My-Libraries/gpl.js"></script>
