Changed flex direction for body

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             }
 
             body {
-                flex-flow: row nowrap;
+                flex-flow: column nowrap;
             }
 
             svg {
