Added flex properties to elements and changed flex direction for body again

--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
             }
 
             body {
-                flex-flow: column nowrap;
+                flex-flow: row nowrap;
             }
 
             svg {
+                flex: 0 0 auto;
                 padding: 0;
             }
 
             div {
+                flex: 0 0 auto;
                 background-color: transparent; 
                 padding: 0;
                 display: grid;
