Enabled flex for all body elements

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
                 flex-flow: row nowrap;
             }
 
+            body * {
+                display: flex;
+            }
+
             svg {
                 flex: 0 0 auto;
                 padding: 0;
