Added ability to copy output of function

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <input id="screenSize" min="100" step="10" value="10" type="number">
             <input id="xinput" min="-10" max="10" value="0" type="number">
             <input id="equation" min="0" type="number" value="0" step="1">
-            <label id="outputLabel">Y: </label>
+            <button id="outputLabel">Y: </button>
         </div>
     </body>
 
