Fixed javascript, styling, and flex layout

--- a/index.html
+++ b/index.html
@@ -8,38 +8,7 @@
         <link rel="stylesheet" href="https://caretparrot.github.io/My-Libraries/dark.css">
         <link rel="icon" href="https://caretparrot.github.io/My-Libraries/Profile Picture.png">
         <link rel="manifest" href="https://caretparrot.github.io/Auto-Grapher/manifest.json" />
-        <style>
-            div * {
-                background-color: hsl(240, 20%, 20%);
-                display: grid;
-                grid: auto / auto auto auto auto auto auto auto;
-                justify-content: center;
-                align-content: center;
-                align-items: center;
-                text-align: center;
-            }
-
-            body {
-                flex-flow: row nowrap;
-            }
-
-            body * {
-                display: flex;
-            }
-
-            svg {
-                flex: 0 0 auto;
-                padding: 0;
-            }
-
-            div {
-                flex: 0 0 auto;
-                background-color: transparent; 
-                padding: 0;
-                display: grid;
-                grid: auto / auto auto auto auto;
-            }
-        </style>
+        <link rel="stylesheet" href="./style.css">
         <script defer src="https://caretparrot.github.io/My-Libraries/gpl.js"></script>
         <script defer src="https://caretparrot.github.io/My-Libraries/math-plus.js"></script>
         <script defer src="https://caretparrot.github.io/Auto-Grapher/script.js"></script>
