--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <input id="windowX" min="1" step="1" value="10" type="number">
             <input id="windowY" min="1" step="1" value="10" type="number">
             <input id="screenSize" min="100" step="10" value="10" type="number">
-            <input id="xinput" min="-10" max="10" value="0" type="number">
+            <input id="xinput" value="0" type="number">
             <input id="equation" min="0" type="number" value="0" step="1">
             <button id="outputLabel" onclick="copyValue()">Y: </button>
         </div>
