Added a button to copy functions

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <input id="xinput" value="0" type="number">
             <input id="equation" min="0" type="number" value="0" step="1">
             <button id="outputLabel" onclick="copyValue()">Y: </button>
+            <button id="exportButton" onclick="copyFunctions()">Copy Functions</button>
         </div>
     </body>
 
