--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Auto Grapher</title>
-        <link rel="stylesheet" href="https://caretparrot.github.io/My-Libraries/dark.css">
+        <link rel="stylesheet" href="https://caretparrot.github.io/My-Libraries/default.css">
         <link rel="icon" href="https://caretparrot.github.io/My-Libraries/Profile Picture.png">
         <link rel="manifest" href="https://caretparrot.github.io/Auto-Grapher/manifest.json" />
         <link rel="stylesheet" href="./style.css">
