Fixed bug with styling

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <link rel="stylesheet" href="./style.css">
         <script defer src="https://caretparrot.github.io/My-Libraries/gpl.js"></script>
         <script defer src="https://caretparrot.github.io/My-Libraries/math-plus.js"></script>
-        <script defer src="https://caretparrot.github.io/Auto-Grapher/script.js"></script>
+        <script defer src="./script.js"></script>
     </head>
 
     <body>
-        <svg id="canvas"></svg>
+        <svg id="canvas" class="noPaint"></svg>
         
         <div>
             <textarea id="input" title="Input your functions here."></textarea>
