Made program work with grid display

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Auto Grapher</title>
-        <link rel="stylesheet" href="https://caretparrot.github.io/My-Libraries/default.css">
+        <link rel="stylesheet" href="https://caretparrot.github.io/My-Libraries/grid.css">
         <link rel="icon" href="https://caretparrot.github.io/My-Libraries/Profile Picture.png">
         <link rel="manifest" href="https://caretparrot.github.io/Auto-Grapher/manifest.json" />
         <link rel="stylesheet" href="./style.css">
@@ -13,20 +13,16 @@
         <script defer src="https://caretparrot.github.io/My-Libraries/math-plus.js"></script>
         <script defer src="./script.js"></script>
     </head>
-
     <body>
         <svg id="canvas" class="noPaint"></svg>
-        
-        <div>
-            <textarea id="input" title="Input your functions here."></textarea>
-            <input title="Adjust the domain of the display window." id="windowX" min="1" step="1" value="10" type="number">
-            <input title="Adjust the range of the display window." id="windowY" min="1" step="1" value="10" type="number">
-            <input title="Change the size of the display window." id="screenSize" min="100" step="10" value="10" type="number">
-            <input title="Input an x value to find the output." id="xinput" value="0" type="number">
-            <input title="Change the function that the x-value is plugged into." id="equation" min="0" type="number" value="0" step="1">
-            <button title="The output of the x-value." id="outputLabel" onclick="copyValue()">Y: </button>
-            <button title="Copy all of your functions." id="exportButton" onclick="copyFunctions()">Copy Functions</button>
-        </div>
+        <textarea id="input" title="Input your functions here."></textarea>
+        <input title="Adjust the domain of the display window." id="windowX" min="1" step="1" value="10" type="number">
+        <input title="Adjust the range of the display window." id="windowY" min="1" step="1" value="10" type="number">
+        <input title="Change the size of the display window." id="screenSize" min="100" step="10" value="10" type="number">
+        <input title="Input an x value to find the output." id="xinput" value="0" type="number">
+        <input title="Change the function that the x-value is plugged into." id="equation" min="0" type="number" value="0" step="1">
+        <button title="The output of the x-value." id="outputLabel" onclick="copyValue()">Y: </button>
+        <button title="Copy all of your functions." id="exportButton" onclick="copyFunctions()">Copy Functions</button>
     </body>
 
 </html>
