--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <body>
         <canvas id="graph" width="500" height="500"></canvas>
         <textarea id="input"></textarea>
+        <div id="wrapper">
+            <label for="domain">Domain</label>
+            <input type="number" id="domain" value="10" min="1">
+            <label for="range">Range</label>
+            <input type="number" id="range" value="10" min="1">
+        </div>
     </body>
 
 </html>
