--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <body>
         <canvas id="graph" width="500" height="500"></canvas>
         <textarea id="input"></textarea>
+        <button onclick="copyFunctions()">Copy Functions</button>
         <div id="wrapper">
             <label for="domain">Domain</label>
             <input type="number" id="domain" value="10" min="1">
