--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
         <script defer src="https://caretparrot.github.io/My-Libraries/math-plus.js"></script>
         <script defer src="./script.js"></script>
     </head>
+
     <body>
+        
         <canvas id="graph" width="500" height="500"></canvas>
         <textarea id="input"></textarea>
         <button onclick="copyFunctions()">Copy Functions</button>
+        <input type="number" id="xInput" step="0.1" min="-10" max="10">
+        <input type="number" id="functionSelect" value="0" min="0">
+        <label id="xLabel"></label>
         <div id="wrapper">
             <label for="domain">Domain</label>
             <input type="number" id="domain" value="10" min="1">
