--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Auto Grapher</title>
-        <link rel="stylesheet" href="https://caretparrot.github.io/My-Libraries/default.css">
-        <link rel="icon" href="https://caretparrot.github.io/My-Libraries/Profile Picture.png">
-        <link rel="manifest" href="https://caretparrot.github.io/Auto-Grapher/manifest.json" />
+        <link rel="stylesheet" href="https://caretparrot.github.io/my-libraries/default.css">
+        <link rel="icon" href="https://caretparrot.github.io/my-libraries/Profile Picture.png">
+        <link rel="manifest" href="https://caretparrot.github.io/auto-grapher/manifest.json" />
         <link rel="stylesheet" href="./style.css">
-        <script defer src="https://caretparrot.github.io/My-Libraries/gpl.js"></script>
-        <script defer src="https://caretparrot.github.io/My-Libraries/math-plus.js"></script>
+        <script defer src="https://caretparrot.github.io/my-libraries/gpl.js"></script>
+        <script defer src="https://caretparrot.github.io/my-libraries/math-plus.js"></script>
         <script defer src="./script.js"></script>
     </head>
 
