--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Auto Grapher</title>
-        <link rel="stylesheet" href="https://caretparrot.github.io/my-libraries/default.css">
-        <link rel="icon" href="https://caretparrot.github.io/my-libraries/Profile Picture.png">
+        <link rel="stylesheet" href="https://caretparrot.github.io/papaya-salad/default.css">
+        <link rel="icon" href="https://caretparrot.github.io/papaya-salad/Profile Picture.png">
         <link rel="manifest" href="https://caretparrot.github.io/auto-grapher/manifest.json" />
         <link rel="stylesheet" href="./style.css">
-        <script defer src="https://caretparrot.github.io/my-libraries/gpl.js"></script>
-        <script defer src="https://caretparrot.github.io/my-libraries/math-plus.js"></script>
+        <script defer src="https://caretparrot.github.io/papaya-salad/math-plus.js"></script>
         <script defer src="./script.js"></script>
     </head>
 
@@ -21,7 +20,7 @@
         <button onclick="copyFunctions()">Copy Functions</button>
         <input type="number" id="xInput" step="0.1" min="-10" max="10">
         <input type="number" id="functionSelect" value="0" min="0">
-        <label id="xLabel"></label>
+        <label id="xLabel" for="xInput"></label>
         <div id="wrapper">
             <label for="domain">Domain</label>
             <input type="number" id="domain" value="10" min="1">
