--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <canvas id="graph" width="500" height="500"></canvas>
         <textarea id="input"></textarea>
         <button onclick="copyFunctions()">Copy Functions</button>
-        <input type="number" id="xInput" step="0.1" min="-10" max="10">
+        <input type="number" id="xInput" step="0.1" value="0" min="-10" max="10">
         <input type="number" id="functionSelect" value="0" min="0">
         <label id="xLabel" for="xInput"></label>
         <div id="wrapper">
